// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenreSelect Should highlight More dropdown when secondary genre is selected 1`] = `
<DocumentFragment>
  <div
    class="flex flex-wrap items-center gap-x-8"
    data-testid="genre-select"
  >
    <div
      class="
                        group relative px-2 py-1
                        text-lg font-medium uppercase
                        cursor-pointer
                        transition-colors duration-200
                        text-[var(--color-gray-lighter)] hover:text-[var(--color-text)]
                    "
    >
      All
      <span
        class="
                            className={
                            absolute left-0
                            h-[3px] w-0 -bottom-[16px]
                            bg-[var(--color-primary)]
                            transition-all duration-300
                            group-hover:w-full
                        "
      />
    </div>
    <div
      class="
                        group relative px-2 py-1
                        text-lg font-medium uppercase
                        cursor-pointer
                        transition-colors duration-200
                        text-[var(--color-gray-lighter)] hover:text-[var(--color-text)]
                    "
    >
      Drama
      <span
        class="
                            className={
                            absolute left-0
                            h-[3px] w-0 -bottom-[16px]
                            bg-[var(--color-primary)]
                            transition-all duration-300
                            group-hover:w-full
                        "
      />
    </div>
    <div
      class="
                        group relative px-2 py-1
                        text-lg font-medium uppercase
                        cursor-pointer
                        transition-colors duration-200
                        text-[var(--color-gray-lighter)] hover:text-[var(--color-text)]
                    "
    >
      Comedy
      <span
        class="
                            className={
                            absolute left-0
                            h-[3px] w-0 -bottom-[16px]
                            bg-[var(--color-primary)]
                            transition-all duration-300
                            group-hover:w-full
                        "
      />
    </div>
    <div
      class="
                        group relative px-2 py-1
                        text-lg font-medium uppercase
                        cursor-pointer
                        transition-colors duration-200
                        text-[var(--color-gray-lighter)] hover:text-[var(--color-text)]
                    "
    >
      Action
      <span
        class="
                            className={
                            absolute left-0
                            h-[3px] w-0 -bottom-[16px]
                            bg-[var(--color-primary)]
                            transition-all duration-300
                            group-hover:w-full
                        "
      />
    </div>
    <div
      class="
                        group relative px-2 py-1
                        text-lg font-medium uppercase
                        cursor-pointer
                        transition-colors duration-200
                        text-[var(--color-gray-lighter)] hover:text-[var(--color-text)]
                    "
    >
      Horror
      <span
        class="
                            className={
                            absolute left-0
                            h-[3px] w-0 -bottom-[16px]
                            bg-[var(--color-primary)]
                            transition-all duration-300
                            group-hover:w-full
                        "
      />
    </div>
    <div
      class="relative group"
    >
      <div
        class="genre-more-dropdown relative inline-block text-left genre-more-control"
        data-testid="genre-more-dropdown"
      >
        <button
          class="
                    genre-more-button inline-flex items-center justify-center gap-x-2 min-w-[80px]
                    px-2 py-1 text-lg font-medium uppercase
                    cursor-pointer transition-colors duration-200
                    focus:outline-none
                    
                        text-[var(--color-text)]
                    
                "
          type="button"
        >
          Romance
          <span
            class="transform transition-transform rotate-0"
          >
            <svg
              aria-hidden="true"
              class="w-3 h-3 fill-[var(--color-primary)] "
              data-testid="select-arrow-svg"
              viewBox="0 0 10 10"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0 L10 0 L5 7 z"
                data-testid="select-arrow-path"
              />
            </svg>
          </span>
        </button>
      </div>
      <span
        class="
                        absolute left-0
                        h-[3px] w-0 -bottom-[16px]
                        bg-[var(--color-primary)]
                        transition-all duration-300
                        w-full
                    "
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`GenreSelect Should highlight selected main genre 1`] = `
<DocumentFragment>
  <div
    class="flex flex-wrap items-center gap-x-8"
    data-testid="genre-select"
  >
    <div
      class="
                        group relative px-2 py-1
                        text-lg font-medium uppercase
                        cursor-pointer
                        transition-colors duration-200
                        text-[var(--color-gray-lighter)] hover:text-[var(--color-text)]
                    "
    >
      All
      <span
        class="
                            className={
                            absolute left-0
                            h-[3px] w-0 -bottom-[16px]
                            bg-[var(--color-primary)]
                            transition-all duration-300
                            group-hover:w-full
                        "
      />
    </div>
    <div
      class="
                        group relative px-2 py-1
                        text-lg font-medium uppercase
                        cursor-pointer
                        transition-colors duration-200
                        text-[var(--color-gray-lighter)] hover:text-[var(--color-text)]
                    "
    >
      Drama
      <span
        class="
                            className={
                            absolute left-0
                            h-[3px] w-0 -bottom-[16px]
                            bg-[var(--color-primary)]
                            transition-all duration-300
                            group-hover:w-full
                        "
      />
    </div>
    <div
      class="
                        group relative px-2 py-1
                        text-lg font-medium uppercase
                        cursor-pointer
                        transition-colors duration-200
                        text-[var(--color-text)]
                    "
    >
      Comedy
      <span
        class="
                            className={
                            absolute left-0
                            h-[3px] w-0 -bottom-[16px]
                            bg-[var(--color-primary)]
                            transition-all duration-300
                            w-full
                        "
      />
    </div>
    <div
      class="
                        group relative px-2 py-1
                        text-lg font-medium uppercase
                        cursor-pointer
                        transition-colors duration-200
                        text-[var(--color-gray-lighter)] hover:text-[var(--color-text)]
                    "
    >
      Action
      <span
        class="
                            className={
                            absolute left-0
                            h-[3px] w-0 -bottom-[16px]
                            bg-[var(--color-primary)]
                            transition-all duration-300
                            group-hover:w-full
                        "
      />
    </div>
    <div
      class="
                        group relative px-2 py-1
                        text-lg font-medium uppercase
                        cursor-pointer
                        transition-colors duration-200
                        text-[var(--color-gray-lighter)] hover:text-[var(--color-text)]
                    "
    >
      Horror
      <span
        class="
                            className={
                            absolute left-0
                            h-[3px] w-0 -bottom-[16px]
                            bg-[var(--color-primary)]
                            transition-all duration-300
                            group-hover:w-full
                        "
      />
    </div>
    <div
      class="relative group"
    >
      <div
        class="genre-more-dropdown relative inline-block text-left genre-more-control"
        data-testid="genre-more-dropdown"
      >
        <button
          class="
                    genre-more-button inline-flex items-center justify-center gap-x-2 min-w-[80px]
                    px-2 py-1 text-lg font-medium uppercase
                    cursor-pointer transition-colors duration-200
                    focus:outline-none
                    
                        text-[var(--color-gray-lighter)] hover:text-[var(--color-text)]
                    
                "
          type="button"
        >
          More Genres
          <span
            class="transform transition-transform rotate-0"
          >
            <svg
              aria-hidden="true"
              class="w-3 h-3 fill-[var(--color-primary)] "
              data-testid="select-arrow-svg"
              viewBox="0 0 10 10"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0 L10 0 L5 7 z"
                data-testid="select-arrow-path"
              />
            </svg>
          </span>
        </button>
      </div>
      <span
        class="
                        absolute left-0
                        h-[3px] w-0 -bottom-[16px]
                        bg-[var(--color-primary)]
                        transition-all duration-300
                        group-hover:w-full
                    "
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`GenreSelect Should render main genre tabs and More dropdown 1`] = `
<DocumentFragment>
  <div
    class="flex flex-wrap items-center gap-x-8"
    data-testid="genre-select"
  >
    <div
      class="
                        group relative px-2 py-1
                        text-lg font-medium uppercase
                        cursor-pointer
                        transition-colors duration-200
                        text-[var(--color-gray-lighter)] hover:text-[var(--color-text)]
                    "
    >
      All
      <span
        class="
                            className={
                            absolute left-0
                            h-[3px] w-0 -bottom-[16px]
                            bg-[var(--color-primary)]
                            transition-all duration-300
                            group-hover:w-full
                        "
      />
    </div>
    <div
      class="
                        group relative px-2 py-1
                        text-lg font-medium uppercase
                        cursor-pointer
                        transition-colors duration-200
                        text-[var(--color-gray-lighter)] hover:text-[var(--color-text)]
                    "
    >
      Drama
      <span
        class="
                            className={
                            absolute left-0
                            h-[3px] w-0 -bottom-[16px]
                            bg-[var(--color-primary)]
                            transition-all duration-300
                            group-hover:w-full
                        "
      />
    </div>
    <div
      class="
                        group relative px-2 py-1
                        text-lg font-medium uppercase
                        cursor-pointer
                        transition-colors duration-200
                        text-[var(--color-text)]
                    "
    >
      Comedy
      <span
        class="
                            className={
                            absolute left-0
                            h-[3px] w-0 -bottom-[16px]
                            bg-[var(--color-primary)]
                            transition-all duration-300
                            w-full
                        "
      />
    </div>
    <div
      class="
                        group relative px-2 py-1
                        text-lg font-medium uppercase
                        cursor-pointer
                        transition-colors duration-200
                        text-[var(--color-gray-lighter)] hover:text-[var(--color-text)]
                    "
    >
      Action
      <span
        class="
                            className={
                            absolute left-0
                            h-[3px] w-0 -bottom-[16px]
                            bg-[var(--color-primary)]
                            transition-all duration-300
                            group-hover:w-full
                        "
      />
    </div>
    <div
      class="
                        group relative px-2 py-1
                        text-lg font-medium uppercase
                        cursor-pointer
                        transition-colors duration-200
                        text-[var(--color-gray-lighter)] hover:text-[var(--color-text)]
                    "
    >
      Horror
      <span
        class="
                            className={
                            absolute left-0
                            h-[3px] w-0 -bottom-[16px]
                            bg-[var(--color-primary)]
                            transition-all duration-300
                            group-hover:w-full
                        "
      />
    </div>
    <div
      class="relative group"
    >
      <div
        class="genre-more-dropdown relative inline-block text-left genre-more-control"
        data-testid="genre-more-dropdown"
      >
        <button
          class="
                    genre-more-button inline-flex items-center justify-center gap-x-2 min-w-[80px]
                    px-2 py-1 text-lg font-medium uppercase
                    cursor-pointer transition-colors duration-200
                    focus:outline-none
                    
                        text-[var(--color-gray-lighter)] hover:text-[var(--color-text)]
                    
                "
          type="button"
        >
          More Genres
          <span
            class="transform transition-transform rotate-0"
          >
            <svg
              aria-hidden="true"
              class="w-3 h-3 fill-[var(--color-primary)] "
              data-testid="select-arrow-svg"
              viewBox="0 0 10 10"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0 L10 0 L5 7 z"
                data-testid="select-arrow-path"
              />
            </svg>
          </span>
        </button>
      </div>
      <span
        class="
                        absolute left-0
                        h-[3px] w-0 -bottom-[16px]
                        bg-[var(--color-primary)]
                        transition-all duration-300
                        group-hover:w-full
                    "
      />
    </div>
  </div>
</DocumentFragment>
`;
